--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "init-with-dom",
-  "version": "1.1.0",
-  "description": "init-with-dom",
+  "version": "1.2.0",
+  "description": "init with dom",
   "homepage": "",
   "author": {
     "name": "antitim",
     "email": "antitim@yandex.ru",
     "url": ""
   },
-  "main": "build/initwithdom.min.js",
+  "main": "build/iwd.min.js",
   "keywords": [],
   "repository": "antitim/iwd",
   "scripts": {
-    "build": "uglifyjs src/*.js -o build/iwd.min.js --comments all",
+    "build": "rollup --config",
     "lint": "eslint src/*.js"
   },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^3.9.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
-    "uglify-js": "^3.0.18"
+    "rollup": "^0.51.8",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
