--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "init-with-dom",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "description": "init with dom",
-  "homepage": "",
+  "homepage": "https://github.com/antitim/iwd",
   "author": {
     "name": "antitim",
     "email": "antitim@yandex.ru",
-    "url": ""
+    "url": "https://github.com/antitim/iwd"
   },
-  "main": "build/iwd.min.js",
+  "main": "lib/iwd.js",
+  "browser": "dist/iwd.js",
+  "module": "src/index.js",
   "keywords": [],
   "repository": "antitim/iwd",
   "scripts": {
+    "install": "rollup --config",
     "build": "rollup --config",
     "lint": "eslint src/*.js"
   },
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^3.9.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "rollup": "^0.51.8",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.10.0",
+    "eslint-plugin-compat": "^2.6.3",
+    "rollup": "^0.67.4",
+    "rollup-plugin-babel": "^4.1.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-terser": "^3.0.0"
   }
 }
