--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,8 +1,11 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/env", {
       "modules": false
     }]
   ],
-  "plugins": ["external-helpers"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ],
+  "exclude": "node_modules/**"
 }
