--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/env", {
       "modules": false
     }]
-  ],
-  "plugins": ["external-helpers"]
+  ]
 }
